Added login logout feature